--- a/index.html
+++ b/index.html
@@ -498,7 +498,8 @@
                 4. 根据期望收益选择最优下注策略<br>
                 5. 成为稻谷田赌神<br>
                 <br>
-                <span style="color: #ffd700;">提示：可点击浏览器"添加到主屏幕"像APP一样使用</span>
+                <!-- <span style="color: #ffd700;">提示：可点击浏览器"添加到主屏幕"像APP一样使用</span> -->
+                <span style="color: #ffd700;">提示：收藏网站方便下次使用！！</span>
             </div>
         </div>
     </div>
