--- a/index.html
+++ b/index.html
@@ -512,7 +512,6 @@
     <div class="card donate-card" style="margin-top: 20px; background: linear-gradient(135deg, #1677ff 0%, #0056d6 100%);">
         <div class="card-title" style="color: #fff;">🧋 支持开发者</div>
         <div style="text-align: center; color: #e6f2ff; font-size: 0.9em; line-height: 1.6; margin-bottom: 15px;">
-            如果这款工具帮你赢得了筹码<br>
             欢迎打赏一杯奶茶 🧋
         </div>
         
@@ -529,6 +528,25 @@
             打赏金额随意，心意最重要 ❤️
         </div>
     </div>
-        
+
+    <!-- 免责声明
+    <div class="card" style="margin-top: 20px; background: rgba(200,0,0,0.2); border: 1px solid rgba(255,100,100,0.3); opacity: 0.8;">
+        <div class="card-title" style="color: #ff6b6b;">⚠️ 免责声明</div>
+        <div style="font-size: 0.85em; color: #ffcccc; line-height: 1.6;">
+            <p>本工具仅供<strong>个人学习和娱乐</strong>使用，基于蒙特卡洛模拟的概率计算不保证100%准确性。</p>
+            <p style="margin-top: 8px;">因使用本工具产生的任何<strong>经济损失</strong>或<strong>法律问题</strong>，开发者概不负责。</p>
+            <p style="margin-top: 8px; color: #ff9999;"><strong>请勿将本工具用于赌博等违法行为。</strong></p>
+        </div>
+    </div> -->
+    <!-- 免责声明 - 限制宽度版本 -->
+    <div class="card" style="margin-top: 20px; max-width: 500px; margin-left: auto; margin-right: auto; 
+        opacity: 0.7; background: rgba(200,0,0,0.2); border: 1px solid rgba(255,100,100,0.3);">
+        <div style="font-size: 0.85em; color: #999; text-align: center; line-height: 1.6;">
+            <strong style="color: #ff6b6b;">⚠️ 免责声明</strong><br>
+            本工具仅供个人学习和娱乐使用，不保证结果准确性。<br>
+            因使用本工具产生的任何损失或法律问题，开发者概不负责。<br>
+            <strong style="color: #ff9999;">请勿用于赌博等违法行为。</strong>
+        </div>
+    </div>
 </body>
 </html>
